--- a/yes.html
+++ b/yes.html
@@ -152,7 +152,7 @@
           ❤❤❤❤❤
                ❤❤❤
                     ❤</div>
-        <audio id="audio_music" src="https://alimov2.a.kwimgs.com/upic/2022/04/26/18/BMjAyMjA0MjYxODAzMDJfMjQ1MzM2NTM1OF83Mjk2OTgwODA3N18yXzM=_b_B211e96b5550616ca6d09fff7916b42d6.mp4" loop="loop"></audio>
+        <!-- <audio id="audio_music" src="https://alimov2.a.kwimgs.com/upic/2022/04/26/18/BMjAyMjA0MjYxODAzMDJfMjQ1MzM2NTM1OF83Mjk2OTgwODA3N18yXzM=_b_B211e96b5550616ca6d09fff7916b42d6.mp4" loop="loop"></audio> -->
         <script src="https://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
         <script>
             var id = "1058";
